--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
-body {
+@import '~antd/dist/antd.css';
+
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin-bottom: 0;
+}
+
+body {
   font-family: sans-serif;
 }
