--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,10 @@ h1, h2, h3, h4, h5, h6 {
 body {
   font-family: sans-serif;
 }
+
+.container {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 0 20px;
+  margin-bottom: 80px;
+}
