--- a/src/index.css
+++ b/src/index.css
@@ -16,5 +16,11 @@ body {
   max-width: 1100px;
   margin: 0 auto;
   padding: 0 20px;
-  margin-bottom: 80px;
+  margin-bottom: 40px;
+}
+
+footer {
+  padding: 20px 0;
+  background: #000;
+  color: #fff;
 }
